# pysysaudio

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml
examples/: context_manager.py  deepgram_live_transcription.py  fft_spectrum.py  raw_stdout.py
native/: audio_recorder.h  audio_recorder.mm  audio_recorder_win.cpp  bindings.cpp
pysysaudio/: __init__.py  recorder.py
tests/: test_recorder.py
